fix: unblurred a hero video

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,7 +143,7 @@ section.hero::before {
   left: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(2px) brightness(0.4);
+  backdrop-filter: brightness(0.4);
 }
 
 section.hero .hero__text {
